fix issue where font was not rendering properly on Firefox

--- a/public/css/news-website-feature-article-template-public.css
+++ b/public/css/news-website-feature-article-template-public.css
@@ -118,7 +118,7 @@
    margin-top: 0;
    font-size: 3rem;
    padding-right: .4rem;
-   font-family: "Surveyor Display", serif;
+   font-family: "Surveyor Display A", "Surveyor Display B", serif;
    font-weight: 500;
    font-size: 4.5rem;
    text-align: left;
